# Kan

./: CMakeLists.txt
cmake/: kan_build_module.cmake
cmake/kan/: application.cmake  clang_format.cmake  context.cmake  reflection_statics.cmake  testing.cmake
executable/application_framework_examples/: CMakeLists.txt
executable/application_framework_examples/configuration/: example_text_effects.rd  example_ui_core_render.rd  example_ui_interaction.rd  example_ui_render.rd
executable/application_framework_examples/unit/basic/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/deferred_render/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/test_utilities/: CMakeLists.txt
executable/application_framework_examples/unit/text_effects/: CMakeLists.txt  example.c
executable/application_framework_examples/unit/ui_core_render/: CMakeLists.txt  example.c
executable/application_framework_examples/world/: core_root.rd
scripts/log_analysis/: frame_time
test/context_reflection_system/: test_context_reflection_system.c
test/readable_data/: test_readable_data.c
test/reflection/: generator_test_second.h  test_reflection.c
test/text/: test_text.c
test/universe/: test_universe.c
test/universe_transform/: test_universe_transform.c
unit/context_render_backend_system/: CMakeLists.txt
unit/resource_render_foundation_build/: CMakeLists.txt
unit/resource_ui/: CMakeLists.txt
unit/text_ft_hb/: CMakeLists.txt
unit/universe_render_foundation/: CMakeLists.txt
unit/universe_ui/: CMakeLists.txt
(+109 files in other folders)
